cargo-features = ["profile-overrides"]

[workspace]

members = [
    "contract",
    "contracts/[!.]*/*",
    "engine-core",
    "engine-grpc-server",
    "engine-metrics-scraper",
    "engine-shared",
    "engine-storage",
    "engine-tests",
    "engine-wasm-prep",
    "mint",
    "proof-of-stake",
    "standard-payment",
    "types"
]
exclude = [
    "contracts/examples/README.md",
]

default-members = [
    "contract",
    "engine-core",
    "engine-grpc-server",
    "engine-metrics-scraper",
    "engine-shared",
    "engine-storage",
    "engine-tests",
    "engine-wasm-prep",
    "mint",
    "proof-of-stake",
    "standard-payment",
    "types"
]

# Include debug symbols in the release build of `casperlabs-engine-tests` so that `simple-transfer` will yield useful
# perf data.
[profile.release.package.casperlabs-engine-tests]
debug = true
